--- a/public/404.html
+++ b/public/404.html
@@ -2,17 +2,18 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script>
-      var path = window.location.pathname;
-      var query = window.location.search;
-      var hash = window.location.hash;
-      var base = '/folio';
-      var redirect = window.location.origin + base + '/?p=' + encodeURIComponent(path.replace(base, '') + query) + hash;
-      window.location.replace(redirect);
+    <script type="text/javascript">
+      var segmentCount = 1;
+      var l = window.location;
+      l.replace(
+        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+        l.pathname.split('/').slice(0, 1 + segmentCount).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(segmentCount).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
+      );
     </script>
   </head>
   <body>
   </body>
 </html>
-```
-
