--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <title>Areeb Khan | Cybersecurity Analyst Portfolio</title>
     <meta name="description" content="Areeb Khan - Cybersecurity Analyst & SOC Enthusiast. Security operations, threat detection, and incident response." />
     <meta name="author" content="Areeb Khan" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <meta property="og:title" content="Areeb Khan | Cybersecurity Portfolio" />
     <meta property="og:description" content="Cybersecurity Analyst & SOC Enthusiast Portfolio" />
     <meta property="og:type" content="website" />
